WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
247431
Ignored TypeError upon optional function call chain
https://bugs.webkit.org/show_bug.cgi?id=247431
Summary
Ignored TypeError upon optional function call chain
Kanguk Lee
Reported
2022-11-03 09:03:35 PDT
// input.js var x = function ( ) { } ?. ( ) . x ; __________________________________________ Hello, Executing the input.js using JSC, it is terminated normally. However, it is expected to throw TypeError since `function ( ) { } ?. ( )` is `undefined`. Running the input.js with JSC results in: --- $ jsc input.js // no error --- while other engines behave like: --- # V8 $ node input.js input.js:1: TypeError: Cannot read properties of undefined (reading 'x') var x = function ( ) { } ?. ( ) . x ; ^ TypeError: Cannot read properties of undefined (reading 'x') at input.js:1:33 # GraalJS $ js input.js TypeError: Cannot read property 'x' of undefined at <js> :program(input.js:1:8-34) --- WebKit version: 615.1.10
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-11-03 18:13:16 PDT
<
rdar://problem/101940388
>
Ross Kirsling
Comment 2
2022-11-24 17:26:24 PST
***
Bug 247434
has been marked as a duplicate of this bug. ***
Ross Kirsling
Comment 3
2022-11-24 17:58:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6799
EWS
Comment 4
2022-11-24 21:45:03 PST
Committed
257004@main
(23879e6bd1a0): <
https://commits.webkit.org/257004@main
> Reviewed commits have been landed. Closing PR #6799 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug