Cherry-pick 23879e6bd1a0. rdar://problem/103539367

Ignored TypeError upon optional function call chain
    https://bugs.webkit.org/show_bug.cgi?id=247431

    Reviewed by Yusuke Suzuki.

    Evidently, our implementation of optional chaining has always interpreted `a.b?.().c` and `a.b()?.c` as `a.b?.()?.c`.
    (Hard to believe, but I guess giving more undefineds and less TypeErrors must not have troubled folks that much...)

    The issue is rather JSC-specific, in that it's a confused result of our "function call node menagerie" --
    ExpressionNode::isOptionalChainBase was repurposed for optional calls like `x?.()`, but that failed to recognize
    that the result of a call can also be the base of an optional chain, as in `x()?.y`.

    This patch adds ExpressionNode::isOptionalCall and distinguishes optional call as a separate concept throughout.

    * JSTests/stress/optional-chaining.js:
    (shouldThrowTypeError):
    * Source/JavaScriptCore/bytecompiler/NodesCodegen.cpp:
    (JSC::EvalFunctionCallNode::emitBytecode):
    (JSC::FunctionCallValueNode::emitBytecode):
    (JSC::FunctionCallResolveNode::emitBytecode):
    (JSC::FunctionCallBracketNode::emitBytecode):
    (JSC::FunctionCallDotNode::emitBytecode):
    (JSC::CallFunctionCallDotNode::emitBytecode):
    (JSC::HasOwnPropertyFunctionCallDotNode::emitBytecode):
    (JSC::ApplyFunctionCallDotNode::emitBytecode):
    * Source/JavaScriptCore/parser/ASTBuilder.h:
    (JSC::ASTBuilder::createOptionalChain):
    (JSC::ASTBuilder::makeFunctionCallNode):
    * Source/JavaScriptCore/parser/NodeConstructors.h:
    (JSC::FunctionCallValueNode::FunctionCallValueNode):
    (JSC::FunctionCallResolveNode::FunctionCallResolveNode):
    (JSC::FunctionCallBracketNode::FunctionCallBracketNode):
    (JSC::FunctionCallDotNode::FunctionCallDotNode):
    (JSC::CallFunctionCallDotNode::CallFunctionCallDotNode):
    (JSC::ApplyFunctionCallDotNode::ApplyFunctionCallDotNode):
    (JSC::HasOwnPropertyFunctionCallDotNode::HasOwnPropertyFunctionCallDotNode):
    * Source/JavaScriptCore/parser/Nodes.h:
    (JSC::ExpressionNode::isOptionalCall const):
    * Source/JavaScriptCore/parser/Parser.cpp:
    (JSC::Parser<LexerType>::parseMemberExpression):

    Canonical link: https://commits.webkit.org/257004@main

Canonical link: https://commits.webkit.org/252432.1000@safari-7614-branch